use css classes

--- a/index.html
+++ b/index.html
@@ -4,6 +4,25 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Typing Practice</title>
+    <style>
+        * {
+            box-sizing: border-box;
+        }
+
+        .char-state-0 {background: gray;}
+        .char-state-1 {background: green;}
+        .char-state-2 {background: red;}
+
+        .text {
+            position: relative;
+        }
+
+        .cursor {
+            position: absolute;
+            background: black;
+            opacity: .3;
+        }
+    </style>
 </head>
 <body>
     <script type="module" src="main.js"></script>
